automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
 
-        <!-- image [columbia-logo.png] -->
+        <!-- image [https://learn.co/tracks/kode-with-klossy-front-end/html-and-css/intro-to-html/html-album-cover#columbia-logo.png] -->
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
